--- a/src/css/style.css
+++ b/src/css/style.css
@@ -469,7 +469,8 @@ body {
       font-style: normal;
       font-weight: normal;
       font-size: 18px;
-      line-height: 21px; }
+      line-height: 21px;
+      color: #252525; }
     .body .feedback__input-control::-webkit-input-placeholder {
       color: #B4B4B4; }
     .body .feedback__input-control:-ms-input-placeholder {
@@ -495,6 +496,7 @@ body {
       font-style: normal;
       font-weight: normal;
       font-size: 18px;
+      color: #252525;
       line-height: 21px; }
     .body .feedback__input-textarea::-webkit-input-placeholder {
       color: #B4B4B4; }
@@ -654,6 +656,10 @@ body {
     color: #252525; }
   .body .shop-mobile {
     display: none; }
+    .body .shop-mobile .tabs .mobile-table__block {
+      display: none; }
+    .body .shop-mobile .tabs .mobile-table__block:target {
+      display: block; }
 
 @media (max-width: 1920px) {
   .body .carousel-indicators {
@@ -885,22 +891,47 @@ body {
     margin-top: 60px;
     margin-bottom: 60px; }
     .body .shop-mobile .mobile-table {
-      width: 100%;
-      border: 1px solid #B4B4B4; }
-    .body .shop-mobile .mobile-table th, .body .shop-mobile .mobile-table th {
-      width: 50%; }
+      border: 1px solid #B4B4B4;
+      position: relative; }
     .body .shop-mobile .mobile-table th {
       padding-left: 9px;
       padding-top: 10px;
       padding-bottom: 8px; }
     .body .shop-mobile .mobile-table td {
-      padding-left: 9px;
-      padding-top: 10px;
-      padding-bottom: 8px; }
+      padding: 10px; }
     .body .shop-mobile .mobile-table--gray-color {
       background: #E5E5E5; }
     .body .shop-mobile .mobile-table_block--border {
-      border-bottom: 1px solid #B4B4B4; } }
+      border-bottom: 1px solid #B4B4B4; }
+    .body .shop-mobile td.last {
+      width: 100%; }
+  .body .shop .tabs {
+    margin-bottom: 134px; }
+  .body .shop .tab {
+    max-width: 257px;
+    margin: 20px auto 100px;
+    background-color: #f1f1f1;
+    text-align: center;
+    position: absolute;
+    margin-top: -96px;
+    left: calc(50% - 126px);
+    border: 1px solid #B4B4B4; }
+  .body .shop .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    font-size: 18px; }
+  .body .shop .tab button:hover {
+    background-color: #ddd;
+    border: 1px solid #B4B4B4; }
+  .body .shop .tab button.active {
+    background-color: #ccc;
+    border: 1px solid #B4B4B4; } }
 @media (max-width: 576px) {
   .header .container--max-width {
     max-width: 576px; }
