--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -443,7 +443,8 @@
             font-style: normal
             font-weight: normal
             font-size: 18px
-            line-height: 21px     
+            line-height: 21px 
+            color: #252525    
         &__input-control::placeholder  
             color: #B4B4B4     
         &__input-control:focus
@@ -462,6 +463,7 @@
             font-style: normal
             font-weight: normal
             font-size: 18px
+            color: #252525    
             line-height: 21px            
         &__input-textarea::placeholder                
             color: #B4B4B4   
@@ -597,7 +599,7 @@
             border: 1px solid #B4B4B4
             box-sizing: border-box
             font-size: 18px
-            line-height: 21px        
+            line-height: 21px               
     .table td, .table th 
         padding: 10px 124px 10px 26px
         font-size: 18px
@@ -607,6 +609,13 @@
         color: #252525
     .shop-mobile
         display: none
+        .tabs
+            .mobile-table__block
+                display: none
+            .mobile-table__block:target 
+                display: block  
+            
+
     
                             
         
