--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -242,23 +242,51 @@
                 display: block
                 margin-top: 60px
                 margin-bottom: 60px
-                .mobile-table
-                    width: 100%
+                .mobile-table                   
                     border: 1px solid #B4B4B4
-                .mobile-table th, .mobile-table th
-                    width: 50% 
+                    position: relative                                  
                 .mobile-table th
                     padding-left: 9px
                     padding-top: 10px
                     padding-bottom: 8px
                 .mobile-table td
-                    padding-left: 9px
-                    padding-top: 10px
-                    padding-bottom: 8px
+                    padding: 10px
                 .mobile-table--gray-color
                     background: #E5E5E5
                 .mobile-table_block--border
                     border-bottom: 1px solid #B4B4B4
+                td.last 
+                    width: 100%
+            .tabs
+                margin-bottom: 134px                
+            .tab 
+                max-width: 257px
+                margin: 20px auto 100px                
+                background-color: #f1f1f1
+                text-align: center   
+                position: absolute
+                margin-top: -96px    
+                left: calc(50% - 126px) 
+                border: 1px solid #B4B4B4      
+            .tab button 
+                background-color: inherit
+                float: left
+                border: none
+                outline: none
+                cursor: pointer
+                padding: 14px 16px
+                transition: 0.3s
+                font-size: 18px            
+            .tab button:hover 
+                background-color: #ddd  
+                border: 1px solid #B4B4B4            
+            .tab button.active 
+                background-color: #ccc    
+                border: 1px solid #B4B4B4          
+                
+               
+            
+
 
                         
                                         
