--- a/src/css/style.css
+++ b/src/css/style.css
@@ -411,10 +411,28 @@ body {
     .body .advantages .advantages-inner .avantages__slider .slick-dots li.slick-active button:before {
       display: none; }
   .body .feedback {
-    background: #F7F7F7;
+    background: #fff;
     margin-top: -30px;
     -webkit-transition: 0.5s;
     transition: 0.5s; }
+    .body .feedback .feedback__title-contact {
+      font-style: normal;
+      font-weight: bold;
+      font-size: 36px;
+      line-height: 42px;
+      color: #252525;
+      text-align: center;
+      margin-top: 84px;
+      position: relative; }
+      .body .feedback .feedback__title-contact::before {
+        content: "";
+        display: block;
+        width: 82px;
+        height: 4px;
+        background: #3E7850;
+        position: absolute;
+        left: calc( 50% - 45px );
+        top: 50px; }
     .body .feedback .feedback-inner {
       padding: 94px 0px; }
     .body .feedback__info-title {
@@ -451,7 +469,7 @@ body {
       line-height: 19px;
       color: #B4B4B4;
       position: absolute;
-      background: #F7F7F7;
+      background: #fff;
       padding: 0px 10px;
       top: -10px;
       left: 30px; }
@@ -459,7 +477,7 @@ body {
       height: 48px;
       border: 1px solid #CACACA;
       border-radius: 3px;
-      background: #F7F7F7;
+      background: #fff;
       -webkit-box-shadow: none;
               box-shadow: none;
       margin-bottom: 28px;
@@ -485,7 +503,7 @@ body {
       height: 208px;
       border: 1px solid #CACACA;
       border-radius: 3px;
-      background: #F7F7F7;
+      background: #fff;
       -webkit-box-shadow: none;
               box-shadow: none;
       margin-bottom: 28px;
@@ -536,6 +554,62 @@ body {
       background: #326943; }
     .body .feedback__button-submit-col {
       margin-left: -10px; }
+  .body .map {
+    padding: 0;
+    margin: 0 0 -7px;
+    width: 100%; }
+    .body .map__google {
+      width: 100%;
+      height: 636px; }
+  .body .feedback--margin {
+    margin-top: 1px;
+    background: #FFFFFF; }
+  .body .product__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 42px;
+    color: #252525;
+    margin-top: 15px; }
+  .body .product__item {
+    margin-top: 22px; }
+  .body .product__image {
+    max-width: 430px;
+    margin-left: 1px; }
+  .body .product__image img {
+    border: 1px solid #E5E5E5;
+    padding: 23px 82px 26px 82px; }
+  .body .product__text-title {
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 33px;
+    color: #252525;
+    margin-top: -5px;
+    margin-bottom: 10px; }
+  .body .product__details {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    color: #3E7850;
+    margin-bottom: 12px; }
+  .body .product__description {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    color: #232323; }
+  .body .product__info {
+    margin-top: 30px; }
+  .body .product__info-title {
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 33px;
+    color: #252525; }
+  .body .product__info-text {
+    margin-top: 16px;
+    font-size: 18px;
+    line-height: 21px;
+    color: #252525; }
   .body .footer {
     background: #252525; }
     .body .footer .container--max-width {
@@ -722,6 +796,17 @@ body {
   .body .feedback__button-submit-col {
     margin-left: -3px;
     margin-top: 15px; }
+  .body .product__image {
+    max-width: 360px; }
+  .body .product__image img {
+    padding: 23px 40px 26px 40px; }
+  .body .product__text-title {
+    font-size: 26px; }
+  .body .product__details {
+    font-size: 16px; }
+  .body .product__description {
+    font-size: 16px;
+    line-height: 18px; }
   .body .footer .container--max-width {
     max-width: 992px; }
     .body .footer .container--max-width .footer-inner__menu {
@@ -796,14 +881,14 @@ body {
         border-radius: 0px 3px 3px 0px;
         color: #fff;
         width: 62px; } }
-@media (max-width: 768px) {
+@media (max-width: 770px) {
   .header .container--max-width {
     max-width: 768px; }
 
   .body .container--max-width {
     max-width: 768px; }
   .body .title-info .carousel-inner .carousel-item__image {
-    left: 155px;
+    left: calc(50% - 120px);
     top: 110px; }
   .body .title-info .carousel-inner .carousel-info {
     top: -310px; }
@@ -830,6 +915,12 @@ body {
       margin-left: 13px; }
     .body .catalog .catalog-iner__products-img {
       margin-top: 50px; }
+  .body .feedback .feedback__title-contact {
+    margin-top: 20px;
+    margin-bottom: -20px; }
+    .body .feedback .feedback__title-contact::before {
+      top: 45px;
+      left: calc(50% - 42px); }
   .body .feedback .feedback-inner {
     padding: 70px 0px; }
     .body .feedback .feedback-inner .feedback__info {
@@ -844,6 +935,39 @@ body {
     margin-bottom: 60px; }
   .body .feedback__button-submit {
     width: 100%; }
+  .body .map {
+    margin-top: 20px; }
+    .body .map__google {
+      width: 100%;
+      height: 590px; }
+  .body .product__title {
+    font-size: 24px;
+    line-height: 28px;
+    margin-top: 20px; }
+  .body .product__image {
+    margin: auto;
+    margin-bottom: 25px; }
+  .body .product__image img {
+    padding: 19px 66px 20px 66px; }
+  .body .product__text-title {
+    font-size: 20px;
+    line-height: 23px;
+    margin-bottom: 10px; }
+  .body .product__details {
+    font-size: 16px;
+    line-height: 19px; }
+  .body .product__description {
+    font-size: 16px;
+    line-height: 19px; }
+  .body .product__info {
+    margin-top: 40px; }
+  .body .product__info-title {
+    font-size: 20px;
+    line-height: 23px; }
+  .body .product__info-text {
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 20px; }
   .body .footer .container--max-width {
     max-width: 768px; }
     .body .footer .container--max-width .footer-inner__nav {
@@ -939,17 +1063,19 @@ body {
   .body .container--max-width {
     max-width: 576px; }
   .body .title-info .carousel-inner .carousel-item__image {
-    left: 18%; }
+    left: calc(50% - 120px); }
   .body .footer .container--max-width {
     max-width: 576px; } }
 @media (max-width: 420px) {
   .body .title-info .carousel-inner .carousel-item__image {
-    left: 16%;
+    left: calc(50% - 120px);
     top: 120px; }
   .body .title-info .carousel-inner .carousel-info {
     top: -310px; }
     .body .title-info .carousel-inner .carousel-info__title {
       font-size: 25px;
-      width: 358px; } }
+      width: 358px; }
+  .body .product__image img {
+    padding: 20px 38px 20px 38px; } }
 
 /*# sourceMappingURL=style.css.map */
