--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -78,6 +78,18 @@
             &__button-submit-col
                 margin-left: -3px
                 margin-top: 15px 
+        .product  
+            &__image       
+                max-width: 360px   
+            &__image img                 
+                padding: 23px 40px 26px 40px
+            &__text-title
+                font-size: 26px
+            &__details
+                font-size: 16px
+            &__description
+                font-size: 16px
+                line-height: 18px
         .footer
             .container--max-width 
                 max-width: 992px 
@@ -146,7 +158,7 @@
                     color: #fff
                     width: 62px     
 
-@media ( max-width: 768px )
+@media ( max-width: 770px )
     .header
         .container--max-width 
             max-width: 768px
@@ -157,7 +169,7 @@
             .carousel-inner
                 .carousel-item
                     &__image
-                        left: 155px
+                        left: calc(50% - 120px)
                         top: 110px
                 .carousel-info 
                     top: -310px
@@ -186,7 +198,13 @@
                     margin-left: 13px
                 &__products-img 
                     margin-top: 50px
-        .feedback           
+        .feedback      
+            .feedback__title-contact                
+                margin-top: 20px
+                margin-bottom: -20px                
+                &::before                    
+                    top: 45px 
+                    left: calc(50% - 42px)      
             .feedback-inner
                 padding: 70px 0px  
                 .feedback__info
@@ -201,6 +219,40 @@
                 margin-bottom: 60px
             &__button-submit
                 width: 100%
+        .map      
+            margin-top: 20px         
+            &__google
+                width: 100%
+                height: 590px
+        .product
+            &__title                
+                font-size: 24px
+                line-height: 28px
+                margin-top: 20px
+            &__image 
+                margin: auto 
+                margin-bottom: 25px
+            &__image img                 
+                padding: 19px 66px 20px 66px
+            &__text-title
+                font-size: 20px
+                line-height: 23px
+                margin-bottom: 10px
+            &__details
+                font-size: 16px
+                line-height: 19px
+            &__description
+                font-size: 16px
+                line-height: 19px
+            &__info
+                margin-top: 40px
+            &__info-title
+                font-size: 20px
+                line-height: 23px
+            &__info-text
+                font-size: 16px
+                line-height: 19px
+                margin-bottom: 20px
         .footer
             .container--max-width 
                 max-width: 768px
@@ -283,13 +335,7 @@
             .tab button.active 
                 background-color: #ccc    
                 border: 1px solid #B4B4B4          
-                
-               
-            
-
-
-                        
-                                        
+                                  
 @media ( max-width: 576px )
     .header
         .container--max-width 
@@ -301,29 +347,25 @@
             .carousel-inner
                 .carousel-item
                     &__image
-                        left: 18%
+                        left: calc(50% - 120px)
         .footer
             .container--max-width 
                 max-width: 576px
-    
+
 @media ( max-width: 420px )
     .body        
         .title-info                            
             .carousel-inner
                 .carousel-item
                     &__image
-                        left: 16%
+                        left: calc(50% - 120px)
                         top: 120px
                 .carousel-info 
                     top: -310px                  
                     &__title
                         font-size: 25px
                         width: 358px
-         
-                              
-                   
-    
-// @media ( max-width: 576px )
-//     .container--max-width 
-//         width: 100%
-    
+        .product            
+            &__image img                 
+                padding: 20px 38px 20px 38px
+                            
